<resources>
    <string name="facebook_app_id" translatable="false">408379096985043</string>
    <string name="app_name">BMI Disease Tracker</string>
    <string name="empty" translatable="false"> </string>
    <string name="address">Email</string>
    <string name="button_agree">Agree</string>
    <string name="button_cancel">Disagree</string>
    <string name="button_save">Save</string>
    <string name="data">Data</string>
    <string name="doctor">Doctor</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="edit_parametrs">Edit parameters</string>
    <string name="email_exist">already registered.</string>
    <string name="empty_field">Not all input fields are filled.</string>
    <string name="error_connection">No internet connection.</string>
    <string name="error_registration">Registration error.</string>
    <string name="error_reset_password">Reset password error.</string>
    <string name="error_socket_timeout">Server time out.</string>
    <string name="error_unauthorized">Invalid username or password.</string>
    <string name="error_not_found">Not found user.</string>
    <string name="error_token_invalid">Try again.</string>
    <string name="error_unknown">Error.</string>
    <string name="need_to_connect_to_fit">You need to reconnect to Google Fit.</string>
    <string name="already_connect_to_fit">You are already connected to Google Fit.\n Click on the icon to disconnect.</string>
    <string name="finish_registration">Registration completion</string>
    <string name="finish_reset_password">Reset password.</string>
    <string name="finish_reset_password_ok">Password changed successfully!</string>
    <string name="finish_registration_text">To complete the registration you need follow the link sent to you by email.</string>
    <string name="finish_reset_password_text">To complete the reset your password you need follow the link sent to you by email</string>
    <string name="is_eight_symbol">6 characters (1 symbol)</string>
    <string name="is_number">1 number</string>
    <string name="is_symbol">1 special character (!,+-# etc)</string>
    <string name="insert_email">E-mail</string>
    <string name="insert_lastName">Surname</string>
    <string name="insert_login">E-mail</string>
    <string name="insert_name">Name</string>
    <string name="insert_password">Password</string>
    <string name="insert_gender">Gender</string>
    <string name="insert_birth_date">Birth date</string>
    <string name="insert_growth">Growth (cm)</string>
    <string name="insert_weight">Weight (kg)</string>
    <string name="login">Sign in</string>
    <string name="logoff">Logoff</string>
    <string name="main">Home</string>
    <string name="main_description">Main recommendations</string>
    <string name="profile">Profile</string>
    <string name="registration">No account?</string>
    <string name="click_here"><u>Click here</u></string>
    <string name="registration_text">Missing account:</string>
    <string name="remember">Forgot password?</string>
    <string name="remember_password">Forgot your password</string>
    <string name="rewrite_password">Reenter password</string>
    <string name="save">save</string>
    <string name="save_password">Save password</string>
    <string name="user_name">User name</string>
    <string name="wrong_email">Invalid email format</string>
    <string name="wrong_password">Password do not match.</string>
    <string name="wrong_password_alphabet">Password does not contain letters.</string>
    <string name="wrong_password_length">Password is less that 6 characters long.</string>
    <string name="wrong_password_number">Password does not contain numbers.</string>
    <string name="wrong_password_requirements">The password must contain at least 6 characters, consisting of letters and numbers.</string>
    <string name="wrong_password_symbol">Password does not contain special characters.</string>
    <string name="wrong_user_name">Email already registered.</string>
    <string name="cancel">Cancel</string>
    <string name="license_agreement">I agree to the <u>therms \u0026 conditions</u></string>
    <string name="reset_password">Reset</string>
    <string name="next_button">Next</string>
    <string name="description_google_fit">For a more accurate calculation of your data, you can connect services or measuring devices to the application.</string>
    <string name="disclaimer">Disclaimer!</string>
    <string name="disclaimer_text">Our service is not a medical service.\nConsult a specialist for advice. The information provided in this application is for informational purposes only and should not be used for diagnosis or treatment. Our service is not a substitute for professional medical care. If you have or suspect that you may have health problems, please consult your doctor. Our services are second/third opinion based on artificial intelligence algorithms and statistics. We provide diagnostics only of the likelihood of developing diseases based on data on the health status of people with similar parameters.</string>
    <string name="show_again">Don`t show again?\t</string>
    <string name="crash" translatable="false">crash</string>
    <string name="connect_application">Application</string>
    <string name="google_fit" translatable="false">Google Fit</string>
</resources>